--- a/docs/sass/main/wrapper-hero.scss
+++ b/docs/sass/main/wrapper-hero.scss
@@ -1,8 +1,8 @@
 .wrapper-hero {
     padding: 0 30px;
     min-height: 780px;
-    background: url('../../img/hero-block/preview-market.png') no-repeat,
-        url('../../img/hero-block/preview-3d.png') no-repeat;
+    background: url('../img/hero-block/preview-market.png') no-repeat,
+        url('../img/hero-block/preview-3d.png') no-repeat;
     background-size: 50% 100%, auto 100%;
     background-position: 100% 0%, 0% 0;
     display: flex;
