--- a/docs/sass/global/back-to-top.scss
+++ b/docs/sass/global/back-to-top.scss
@@ -7,7 +7,7 @@
     height: 40px;
     border: 3px solid var(--color-accent);
     background-color: var(--color-white);
-    background: url('../../img/arrowTop.jpg') no-repeat;
+    background: url('../img/arrowTop.jpg') no-repeat;
     background-size: 50px 50px;
     padding: 5px;
     border-radius: 50%;
