change css source img

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -245,7 +245,7 @@
   height: 40px;
   border: 3px solid var(--color-accent);
   background-color: var(--color-white);
-  background: url("../../img/arrowTop.jpg") no-repeat;
+  background: url("../img/arrowTop.jpg") no-repeat;
   background-size: 50px 50px;
   padding: 5px;
   border-radius: 50%;
@@ -425,7 +425,7 @@
 .wrapper-hero {
   padding: 0 30px;
   min-height: 780px;
-  background: url("../../img/hero-block/preview-market.png") no-repeat, url("../../img/hero-block/preview-3d.png") no-repeat;
+  background: url("../img/hero-block/preview-market.png") no-repeat, url("../img/hero-block/preview-3d.png") no-repeat;
   background-size: 50% 100%, auto 100%;
   background-position: 100% 0%, 0% 0;
   display: flex;
@@ -621,7 +621,7 @@
   content: "";
   position: absolute;
   right: -10%;
-  background: url("../../img/arrowRight.svg") no-repeat;
+  background: url("../img/arrowRight.svg") no-repeat;
   width: 30px;
   height: 20px;
   animation: arrowX 0.9s ease alternate infinite;
@@ -637,7 +637,7 @@
     position: absolute;
     top: 100%;
     right: 45%;
-    background: url("../../img/arrowDown.svg") no-repeat;
+    background: url("../img/arrowDown.svg") no-repeat;
     width: 30px;
     height: 20px;
     animation: arrowY 0.9s ease alternate infinite;
